# fysics

./: .gitignore  CMakeLists.txt  DIFFUSION.md  FUSION.md  README.md  REGISTRATION.md  REG_REFINE.md  TEXTURE.md  calibrate.c  clahe.c  compact.c  denoise.c  dering.c  diffusion.c  downscale.c  fft.c  fsc.c  fuse.c  fysics.h  glcae.c  guided.c  mask.c  musica.c  noise.c  paganin.c  phasecorr.c  pipeline.c  process.c  register.c  rings.c  sheetness.c  spectral.c  stream.c  texture.c  zarr_io.c  zdrift.c
build_asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bench_fysics  cmake_install.cmake  fysics-process  test_fysics  vca_export
docs/: empirical-analysis.md  esrf-pipeline.md  literature-review.md
tests/: bench_fysics.c  fusion_real_smoke.py  register_real_smoke.py  test_fysics.c
tools/: fy_noise.c  fy_restretch.c  fy_stats.c  fysics_process_main.c  mca_export.c  read_meta.py  vca_export.c
